@@ -1,7 +1,7 @@
 /* cygheap.cc: Cygwin heap manager.
 
    Copyright 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010,
-   2011, 2012, 2013 Red Hat, Inc.
+   2011, 2012, 2013, 2014 Red Hat, Inc.
 
    This file is part of Cygwin.
 
@@ -478,7 +478,7 @@ ccalloc_abort (cygheap_types x, size_t n, size_t size)
 }
 
 extern "C" PWCHAR __reg1
-cwcsdup (const PWCHAR s)
+cwcsdup (PCWSTR s)
 {
   MALLOC_CHECK;
   PWCHAR p = (PWCHAR) cmalloc (HEAP_STR, (wcslen (s) + 1) * sizeof (WCHAR));
@@ -490,7 +490,7 @@ cwcsdup (const PWCHAR s)
 }
 
 extern "C" PWCHAR __reg1
-cwcsdup1 (const PWCHAR s)
+cwcsdup1 (PCWSTR s)
 {
   MALLOC_CHECK;
   PWCHAR p = (PWCHAR) cmalloc (HEAP_1_STR, (wcslen (s) + 1) * sizeof (WCHAR));
